shoe overflow solved

--- a/1-2-sports-card/styles.css
+++ b/1-2-sports-card/styles.css
@@ -28,9 +28,8 @@ body {
   max-width: 300px;
   color: white;
   border-radius: 15px;
-  margin: 80px;
+  margin: 50px;
   box-shadow: 0px 0px 25px 3px #484848;
-  overflow: hidden;
   animation: rotation 8s infinite;
 }
 
@@ -42,8 +41,11 @@ body {
     transform: rotate(-25deg);
   }
 }
+
 .card__background {
   color: white;
+  overflow: hidden;
+
   border-radius: 15px 15px 0 0;
   padding: 15px 15px 30px 15px;
   background: rgb(255, 2, 2);
